fix: dark mode color

--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -8,7 +8,7 @@
 }
 
 .header.dark {
-  background-color: rgba(31, 32, 35, 0.9);
+  background-color: rgba(18, 18, 18, 0.9);
 }
 
 .header.dark .nav-links li a {
