--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,14 @@ body {
 }
 
 body.dark {
-  background: #1f2023;
+  background: #121212;
   color: #ffffff !important;
 }
 
 h1 {
   color: #333;
 }
+
 h1.dark {
   color: #fff;
 }
@@ -27,10 +28,12 @@ h1.dark {
 html {
   scroll-behavior: smooth;
 }
+
 * {
   font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
